# pattern-making

./: Cargo.toml  memo.txt  readme.md
clothes/: Cargo.toml  index.html  index.mjs
clothes/src/: lib.rs
clothes/src/export/: pdf.rs
clothes/src/pattern/: base.rs  measurements.rs  mod.rs
clothes/src/pattern/base/: back.rs  base.rs  front.rs  margin.rs  mod.rs
clothes/src/pattern/common/: dart.rs  mod.rs  pattern.rs
clothes/src/pattern/shirt/: mod.rs  shirt.rs
clothes/src/pattern/shirt/body/: body.rs  mod.rs  polo_body.rs
clothes/src/pattern/shirt/collar/: collar.rs  mod.rs  stand_collar.rs
clothes/src/pattern/shirt/polo_shirt/: mod.rs  polo_shirt.rs
clothes/src/pattern/shirt/sleeve/: mod.rs  short_sleeve.rs  sleeve.rs
dxf/: draw.dxf
examples/: main.rs
pmdraw/: Cargo.toml
pmdraw/src/: drawing.rs  lib.rs
pmdraw/src/shapes/: bezier.rs  circle.rs  line.rs  point.rs
pmfile/: Cargo.toml
pmfile/src/: lib.rs  pdf.rs  pdf2.rs
pmmath/: Cargo.toml
pmmath/src/: lib.rs  matrix.rs
pmrender/src/: lib.rs
src/: main.rs
src/pmake/: Cargo.toml
src/pmdraw/: Cargo.toml
src/pmdraw/src/: drawing.rs
src/pmdraw/src/shapes/: bezier.rs  circle.rs  line.rs  mod.rs  point.rs
src/pmfile/: Cargo.toml
src/pmfile/src/: lib.rs
src/pmmath/: Cargo.toml
src/pmmath/src/: binomial.rs  matrix.rs  pmmath.rs  sigma.rs
src/pmrender/: Cargo.toml
src/pmrender/src/: lib.rs
