[package]
name = "pattern-making"
version = "0.1.0"
authors = ["sm921 <seimei.221.921@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "src/pmake",
    "src/pmdraw",
    "src/pmfile",
    "src/pmmath",
    "src/pmrender",
]

[dependencies]
pmdraw = {path = "src/pmdraw"}
pmfile = {path = "src/pmfile"}
pmmath = {path = "src/pmmath"}
pmrender = {path = "src/pmrender"}