[package]
name = "pattern-making"
version = "0.1.0"
authors = ["sm921 <seimei.221.921@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "pmake",
    "pmdraw",
    "pmfile",
    "pmmath",
    "pmrender",
]

[dependencies]
pmdraw = {path = "pmdraw"}
pmfile = {path = "pmfile"}
pmmath = {path = "pmmath"}
pmrender = {path = "pmrender"}