[package]
name = "pmdraw"
version = "0.1.0"
authors = ["sm921 <seimei.221.921@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
impl_ops = "0.1.1"
pmmath = {path = "../pmmath" }
wasm-bindgen = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pmrender = {path = "../pmrender" }

